[package]
name = "wholesum"
version = "0.2.4"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
include = ["src/**/*", "CHANGELOG.md", "LICENSE", "README.md"]
homepage = "https://github.com/dnaka91/wholesum"
repository = "https://github.com/dnaka91/wholesum"
description = """\
    Wholesome collection of file hashing algorithms all bundled in a single tool. Like sha256sum, \
    b3sum and others, but one: the whole-sum.\
"""
categories = ["command-line-utilities", "filesystem"]
keywords = ["file", "hashing", "utility"]

[dependencies]
anyhow = "1.0.64"
blake2 = "0.10.4"
blake3 = { version = "1.3.1", features = ["traits-preview"] }
clap = { version = "3.2.21", features = ["derive"] }
clap_complete = "3.2.5"
digest = "0.10.3"
fsb = "0.1.3"
gost94 = "0.10.3"
groestl = "0.10.1"
hex = "0.4.3"
md-5 = "0.10.4"
md2 = "0.10.1"
md4 = "0.10.1"
rayon = "1.5.3"
ripemd = "0.1.1"
sha-1 = "0.10.0"
sha2 = "0.10.5"
sha3 = "0.10.4"
shabal = "0.4.1"
sm3 = "0.4.1"
streebog = "0.10.1"
strum = { version = "0.24.1", features = ["derive"] }
tiger = "0.2.1"
whirlpool = "0.10.4"

[profile.release]
lto = true
